Revision history for Pod-Readme

v1.0.0_03
  [Documentation]
  - Consistent names in POD

v1.0.0_02 2014-09-24
  [Bug Fixes]
  - Fixed minimum version of some prerequisites for tests.

  [Enhancements]
  - Added parse_from_file and parse_from_filehandle methods for
    backwards compatability.

  [Other Changes]
  - Added more tests.

  - The bugtracker URL now refers to the GitHub issues list at
    https://github.com/bigpresh/Pod-Readme/issues
    instead of RT.

  - Added a version to all modules in the distribution, and a version
    QA test to the repo.

  [Documentation]
  - Added missing date to Changes.

  - Fixed typos in POD and README.

  - Added stub POD to Pod::Readme::Filter.

  - Fixed a daft typo in the Changes file.

  - Documented known issue in the requires plugin.

  - The README is now a POD document.

v1.0.0_01 2014-09-23
  [Incompatabilities]
  - Major rewrite, using modern Perl v5.10.1.

  - This module is no longer a subclass of a POD parsing
    module. Instead, it is a simple POD filter.

  [New Features]
  - Added support for plugins.

  - Added a "changes" plugin for parsing Changes files.

  - Added a "version" plugin for including the current version.

  - Added a "requires" plugin for listing module requirements.

  - The pod2readme script has been rewritten to take a variety of
    options, and can various formats, such as HTML, Markdown, POD or
    RTF.

  [Documentation]
  - Changes rewritten to conform to CPAN::Changes::Spec.

  - README is now in Markdown format.

  [Other Changes]
  - Switched to semantic versioning.

  - Added MANIFEST.SKIP to distribution.

  - QA tests are no longer part of the distribution.

  - Makefile.PL uses Module::Install.

0.11  2010-12-09

  - Recognise the =encoding directive, rather than dying when it's
    encountered.
    TODO: actually take heed of it.
    Thanks to Ivan Bessarabov for bringing this to my attention!

0.10  2010-05-19
