@@ -9,8 +9,6 @@ license 'artistic2';
 
 tests_recursive('t');
 
-# tests_recursive('xt');
-
 resources(
     license    => 'http://www.perlfoundation.org/artistic_license_2_0',
     repository => 'git://github.com/bigpresh/Pod-Readme.git',
@@ -54,10 +52,24 @@ test_requires(
     'Exporter::Lite' => 0,
     'File::Compare'  => 0,
     'File::Temp'     => 0,
-    'Test::Most'     => 0,
+    'Test::Most'     => 0,    # requires Test::More
 );
 
 install_script(qw{ bin/pod2readme });
+
+author_requires(
+    'Module::Install::AuthorRequires' => 0.02,
+    'Module::Install::AuthorTests'    => 0,
+    'Test::CheckManifest'             => 0.9,
+    'Test::Perl::Critic'              => 0,
+    'Test::Portability::Files'        => 0,
+    'Test::Pod'                       => '1.00',
+    'Test::CleanNamespaces'           => 0,
+    'Test::Pod::Coverage'             => 0,
+    'Test::MinimumVersion'            => 0,
+);
+
+recursive_author_tests('xt');
 
 install_as_cpan;
 auto_install;
