@@ -4,6 +4,9 @@ v1.0.0_03
   [Documentation]
   - Consistent names in POD
 
+  [Other Changes]
+  - Added hooks for author tests in Makefile.PL.
+
 v1.0.0_02 2014-09-24
   [Bug Fixes]
   - Fixed minimum version of some prerequisites for tests.
